force-app/main/default/objects/GLB_P1_Beneficiario__c/GLB_P1_Beneficiario__c.object-meta.xml
<CustomObject>
    <label>Beneficiario</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Beneficiarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>