force-app/main/default/objects/GLB_P1_Beneficiario__c/fields/GLB_P1_Comuna__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Comuna__c</fullName>
    <label>Comuna</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comuna 1</fullName>
            </value>
            <value>
                <fullName>Comuna 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>