force-app/main/default/objects/GLB_P1_Beneficiario__c/fields/GLB_P1_FechaNacimiento__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_FechaNacimiento__c</fullName>
    <label>Fecha de Nacimiento</label>
    <type>Date</type>
</CustomField>