force-app/main/default/objects/GLB_P1_Beneficiario__c/fields/GLB_P1_NombrePoliza__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_NombrePoliza__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre de Póliza</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Beneficiarios</relationshipLabel>
    <relationshipName>Beneficiarios</relationshipName>
    <type>Lookup</type>
</CustomField>