force-app/main/default/objects/GLB_P1_Beneficiario__c/fields/GLB_P1_NumeroPolizaExterno__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_NumeroPolizaExterno__c</fullName>
    <externalId>true</externalId>
    <label>Número de Póliza externo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>