force-app/main/default/objects/GLB_P1_Beneficiario__c/fields/GLB_P1_Porcentaje__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Porcentaje__c</fullName>
    <label>Porcentaje</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>