force-app/main/default/objects/GLB_P1_Beneficiario__c/fields/GLB_P1_Region__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Region__c</fullName>
    <label>Región</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Región del Maule</fullName>
            </value>
            <value>
                <fullName>Región del Ñuble</fullName>
            </value>
            <value>
                <fullName>Región del Biobío</fullName>
            </value>
            <value>
                <fullName>Región de La Araucanía</fullName>
            </value>
            <value>
                <fullName>Región de Los Ríos</fullName>
            </value>
            <value>
                <fullName>Región de Los Lagos</fullName>
            </value>
            <value>
                <fullName>Región de Aysén</fullName>
            </value>
            <value>
                <fullName>Región de Magallanes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>